# splatter_vae

./: .gitignore  .gitmodules  README.md  evaluate_policy.py  mujoco_mig_setup.py  pyproject.toml  train.py  train_model.py  train_policy.py
agents/common/: encoders.py  head.py
agents/diffusion_policy/: __init__.py  dataset.py  model.py  train_dp.py
agents/diffusion_policy/config/: coffee-push.yaml
agents/drm/: drm_metaworld.py  drm_metaworld.yaml  replay_buffer.py  train_drm_metaworld.py
agents/drm/config/cnn_w_crop/: assembly.yaml  coffee_push.yaml  disassemble.yaml  door_open.yaml  drawer_open.yaml  hammer.yaml  pick_place_wall.yaml  soccer.yaml  stick_push.yaml  sweep_into.yaml  window_open.yaml
agents/drm/config/reviwo/: assembly.yaml  coffee_push.yaml  disassemble.yaml  door_open.yaml  drawer_open.yaml  hammer.yaml  pick_place_wall.yaml  stick_push.yaml  window_open.yaml
agents/drm/config/sincro/: coffee_push.yaml  drawer_open.yaml  hammer.yaml  stick_push.yaml  window_open.yaml
agents/drqv2/: drqv2_metaworld.py  replay_buffer.py  train_drqv2_metaworld.py
agents/drqv2/config/cnn/: button-press-wall.yaml  coffee-push.yaml  door-open.yaml  drawer-open.yaml  faucet-close.yaml  hammer.yaml  handle-pull.yaml  lever-pull.yaml  peg-unplug-side.yaml  push-wall.yaml  sweep-into.yaml  window-open.yaml
agents/drqv2/config/cnn_w_crop/: assembly.yaml  disassemble.yaml  door_open.yaml  drawer_open.yaml  hammer.yaml  pick_place_wall.yaml  soccer.yaml  stick_push.yaml  window_open.yaml
agents/drqv2/config/reviwo/: assembly.yaml  (+19 more)
baselines/ReViWo/: config.yaml  dataloader.py  train.py
baselines/SinCro/: config.yaml  dataloader.py  train.py
config/: default.yaml  no_pose.yaml
config/droid/: config.yaml
config/metaworld/: assembly.yaml  button-press-wall.yaml  coffee-push.yaml  coffee_push.yaml  disassemble.yaml  door-open.yaml  door_open.yaml  drawer-open.yaml  drawer_open.yaml  faucet-close.yaml  hammer.yaml  handle-pull.yaml  lever-pull.yaml  peg-unplug-side.yaml  pick_place_wall.yaml  push-wall.yaml  soccer.yaml  stick_push.yaml  sweep-into.yaml  window-open.yaml  window_open.yaml
dataset/: dataloader.py  droid_dataloader.py  render_mimicgen_multiview.py
dataset/metaworld_demo_collect/: collect_metaworld_demos.py  config.yaml  dino_postprocess.py  export_hdf5_images.py
dataset/metaworld_demo_collect/demo_collector/: camera_math.py  config.py  hdf5_writier.py  policy_factory.py  render_mujoco.py  viz.py
dataset/robosuite_demo_collect/: collect_demos.py  postprocess_add_dinov2.py  text.py
dataset/robosuite_demo_collect/demo_collector/: async_hdf5_writer.py  camera_config.py  camera_params.py  device_factory.py  dino_dense.py  render.py  spacemouse_pyspacemouse.py  viz.py
models/: camera_predictor.py  hierarchical_splatter.py  losses.py  splatter.py  splatter_pretraining.py  splatter_train_config.py  swin_transformer.py  transformer.py  vae.py  vision_transformer.py
policies/config/: cnn_w_crop.yaml  default.json  diffusion_default.json  splatter_vae.json  splatter_vae.yaml
policies/encoders/: splatter_encoder.py
policies/eval/: chunked_policy_wrapper.py  flow_inference.py
policies/eval/config/: cnn_w_crop.yaml  splatter_vae.yaml
policies/models/: lossless_adaptation.py  policy.py  transformer_blocks.py  vision.py
policies/utils/: config_loader.py  dataloader.py  dataset_hdf5.py  pose10.py  stats10.py
policy_utils/: dataset_hdf5.py  stats10.py
policy_utils/config/: test.py
utils/: general_utils.py  ray_utils.py  sh_utils.py
visualize/: _splattervae_vis_utils.py  export_splattervae_gaussians.py  splattervae_common.py  visualize_splattervae_tsne.py  visualize_splattervae_view_swap_cross_source.py
(+40 files in other folders)
