[project]
name = "splatter-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython<3",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.3",
    "robosuite>=1.5.2",
    "gradio>=4.44.1",
    "scikit-learn>=1.7.2",
    "mujoco>=3.4.0",
    "h5py>=3.15.1",
    "robosuite-models>=1.0.0",
    "pyspacemouse>=1.1.5",
    "matplotlib>=3.10.8",
    "gsplat",
    "timm>=1.0.24",
    "vector-quantize-pytorch>=1.27.15",
    "setuptools>=80.9.0",
    "einops>=0.8.1",
    "numpy>=1.26.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
    "transformers>=4.57.3",
    "gymnasium>=0.29.1",
    "lerobot>=0.3.2",
    "fused-ssim"
]

[tool.uv.extra-build-dependencies]
gsplat = ["torch"]
fused-ssim = ["torch", "torchvision"]

[tool.uv.sources]
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim" }
