[project]
name = "splatter-vae"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat",
    "lerobot",
    "fused-ssim",
    "cython>=0.29.37",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.3",
    "robosuite>=1.5.2",
    "gradio>=4.44.1",
    "scikit-learn>=1.7.2",
    "mujoco>=3.4.0",
    "h5py>=3.15.1",
    "robosuite-models>=1.0.0",
    "pyspacemouse>=1.1.5",
    "matplotlib>=3.10.8",
    "timm>=1.0.24",
    "vector-quantize-pytorch>=1.27.15",
    "setuptools>=80.9.0",
    "einops>=0.8.1",
    "numpy<2.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.24.0",
    "transformers>=4.57.3",
    "tensorboard>=2.20.0",
]

[tool.uv.extra-build-dependencies]
gsplat = ["torch"]
fused-ssim = ["torch", "torchvision"]

[tool.uv.sources]
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim" }
lerobot = { path = "policies/lerobot/", editable = true }
