[project]
name = "splatter-vae"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "gsplat",
    "fused-ssim",
    "offlinerlkit",
    "cython>=0.29.37",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.3",
    "robosuite>=1.5.2",
    "gradio>=4.44.1",
    "scikit-learn>=1.7.2",
    "mujoco>=3.4.0",
    "h5py>=3.15.1",
    "robosuite-models>=1.0.0",
    "pyspacemouse>=1.1.5",
    "matplotlib>=3.10.8",
    "timm>=1.0.24",
    "vector-quantize-pytorch>=1.27.15",
    "setuptools>=80.9.0",
    "einops>=0.8.1",
    "numpy<2.0.0",
    "wandb[media]>=0.24.0",
    "transformers>=4.57.3",
    "flow-matching>=1.0.10",
    "gymnasium[mujoco]>=1.2.3",
    "metaworld>=3.0.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "tensorflow>=2.18.1",
    "tensorflow-datasets>=4.9.9",
    "tensorboard>=2.18.0",
    "protobuf>=3.20,<4.0",
]

[tool.uv.extra-build-dependencies]
gsplat = ["torch"]
fused-ssim = ["torch", "torchvision"]
offlinerlkit = ["torch"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux'" }]
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim" }
offlinerlkit = { git = "https://github.com/yihaosun1124/OfflineRL-Kit.git" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
